chore: OSS 배포 세팅 수정