@@ -1,21 +1,22 @@
 package com.pluginpolicyengine.store.file;
 
-import com.pluginpolicyengine.core.FlagStore;
-import com.pluginpolicyengine.core.FlagDefinition;
+import com.pluginpolicyengine.core.PolicyStore;
+import com.pluginpolicyengine.core.PolicyDefinition;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.time.Duration;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 
-/** JSON 파일에서 플래그 정의를 읽는 파일 기반 {@link FlagStore} 구현체입니다. */
-public final class JsonFileFlagStore implements FlagStore {
+/** JSON 파일에서 정책 정의를 읽는 파일 기반 {@link PolicyStore} 구현체입니다. */
+public final class JsonFilePolicyStore implements PolicyStore {
 
 	private final Path filePath;
 	private final long ttlMs;
-	private final JsonFlagSerde serde;
+	private final JsonPolicySerde serde;
 
 	private final AtomicReference<Cache> cacheRef = new AtomicReference<>(Cache.empty());
 
@@ -25,34 +26,34 @@ public final class JsonFileFlagStore implements FlagStore {
 	 * @param filePath JSON 파일 경로
 	 * @param ttl 캐시 TTL(0이면 TTL 캐시 비활성)
 	 */
-	public JsonFileFlagStore(String filePath, Duration ttl) {
-		if (filePath == null || filePath.isBlank()) { throw new IllegalArgumentException("filePath is blank");}
+	public JsonFilePolicyStore(String filePath, Duration ttl) {
+		if (isBlank(filePath)) { throw new IllegalArgumentException("filePath is blank");}
 		this.filePath = Paths.get(filePath);
 		this.ttlMs = ttl == null ? 0L : Math.max(0L, ttl.toMillis());
-		this.serde = new JsonFlagSerde();
+		this.serde = new JsonPolicySerde();
 	}
 
 	/**
-	 * 현재 캐시/스냅샷에서 키로 플래그를 조회합니다.
+	 * 현재 캐시/스냅샷에서 키로 정책을 조회합니다.
 	 *
-	 * @param key 기능 플래그 키
-	 * @return 플래그가 존재하면 해당 정의
+	 * @param key 정책 키
+	 * @return 정책이 존재하면 해당 정의
 	 */
 	@Override
-	public Optional<FlagDefinition> find(String key) {
-		if (key == null || key.isBlank()) return Optional.empty();
+	public Optional<PolicyDefinition> find(String key) {
+		if (isBlank(key)) return Optional.empty();
 		Cache c = loadIfNeeded();
-		return Optional.ofNullable(c.flags.get(key));
+		return Optional.ofNullable(c.policies.get(key));
 	}
 
 	/**
-	 * 로드된 모든 플래그를 불변 맵으로 반환합니다.
+	 * 로드된 모든 정책을 불변 맵으로 반환합니다.
 	 *
 	 * @return 키와 정의의 맵
 	 */
 	@Override
-	public Map<String, FlagDefinition> findAll() {
-		return Collections.unmodifiableMap(loadIfNeeded().flags);
+	public Map<String, PolicyDefinition> findAll() {
+		return Collections.unmodifiableMap(loadIfNeeded().policies);
 	}
 
 	private Cache loadIfNeeded() {
@@ -67,23 +68,23 @@ public final class JsonFileFlagStore implements FlagStore {
 		// 파일 mtime 체크로 “TTL 지나도 파일 안 바뀌면 재파싱 생략” (가벼운 최적화)
 		long mtime = lastModifiedMillis(filePath);
 		if (cur.loadedAtMs > 0 && cur.fileMtimeMs == mtime && ttlMs > 0) {
-			cacheRef.set(new Cache(cur.flags, now, mtime));
+			cacheRef.set(new Cache(cur.policies, now, mtime));
 			return cacheRef.get();
 		}
 
 		// reload
-		Map<String, FlagDefinition> parsed = readAndParse(filePath);
+		Map<String, PolicyDefinition> parsed = readAndParse(filePath);
 		Cache next = new Cache(parsed, now, mtime);
 		cacheRef.set(next);
 		return next;
 	}
 
-	private Map<String, FlagDefinition> readAndParse(Path path) {
+	private Map<String, PolicyDefinition> readAndParse(Path path) {
 		if (!Files.exists(path)) {
 			return new HashMap<>();
 		}
 		try {
-			String json = Files.readString(path);
+			String json = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
 			return serde.parseToMap(json);
 		} catch (IOException e) {
 			// 운영에서는 로깅 후 “이전 캐시 유지” 같은 전략도 가능
@@ -100,12 +101,12 @@ public final class JsonFileFlagStore implements FlagStore {
 	}
 
 	private static final class Cache {
-		final Map<String, FlagDefinition> flags;
+		final Map<String, PolicyDefinition> policies;
 		final long loadedAtMs;
 		final long fileMtimeMs;
 
-		Cache(Map<String, FlagDefinition> flags, long loadedAtMs, long fileMtimeMs) {
-			this.flags = flags == null ? new HashMap<>() : new HashMap<>(flags);
+		Cache(Map<String, PolicyDefinition> policies, long loadedAtMs, long fileMtimeMs) {
+			this.policies = policies == null ? new HashMap<>() : new HashMap<>(policies);
 			this.loadedAtMs = loadedAtMs;
 			this.fileMtimeMs = fileMtimeMs;
 		}
@@ -113,5 +114,9 @@ public final class JsonFileFlagStore implements FlagStore {
 		static Cache empty() {
 			return new Cache(new HashMap<>(), 0L, 0L);
 		}
+	}
+
+	private static boolean isBlank(String value) {
+		return value == null || value.trim().isEmpty();
 	}
 }
